--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
         </header>
     </div>
     <main>
-        <div class="equity-wrap">
+        <div class="equity-wrap h-90">
             <article class="container">
                 <div class="equity row">
-                    <section class="col-sm-7 d-flex flex-column justify-content-center align-items-start">
+                    <section class="col-6 d-flex flex-column justify-content-center align-items-start">
                         <h2 class="equity-title">Private Equity Made Easy</h2>
                         <p class="equity-description mt-3">Equiteez is on a mission to make private equity easily
                             accesible
@@ -119,7 +119,7 @@
                             Free
                         </button>
                     </section>
-                    <div class="col-3">
+                    <div class="col-6 w-25">
                         <img src="/img/phone-min.png" alt="phone">
                     </div>
                 </div>
@@ -282,7 +282,7 @@
                         principle perfectly by sweetness do.</p>
                 </section>
             </div>
-            <button class="btn btn-primary">View all news</button>
+            <button class="btn btn-primary d-block m-auto">View all news</button>
         </article>
         <div class="contact-form-wrap">
             <article class="container">
@@ -310,7 +310,7 @@
                             <span>Message*</span>
                             <textarea class="form-control" id="contact-message"></textarea>
                         </label>
-                        <button class="btn btn-primary mt-3 w-25" type="submit">Send</button>
+                        <button class="d-block btn btn-primary mt-3 w-25" type="submit">Send</button>
                     </form>
                 </div>
             </article>
@@ -320,7 +320,7 @@
         <div class="container p-4">
             <div class="row">
                 <div class="col-3">
-                    <div class="row">
+                    <div class="row footer-logo">
                         <svg width="179" height="51" viewBox="0 0 179 51" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <path
@@ -349,9 +349,9 @@
                                 fill="#2ECC71" />
                         </svg>
                     </div>
-                    <span class="row text-white">Contact us</span>
-                    <div>
-                        <a href="" class="header-row-socials-item">
+                    <span class="row text-white ml-2">Contact us</span>
+                    <div class="row mt-5">
+                        <a href="" class="header-row-socials-item col">
                             <svg width="30" height="31" viewBox="0 0 30 31" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" clip-rule="evenodd"
@@ -359,7 +359,7 @@
                                     fill="#2ECC71" />
                             </svg>
                         </a>
-                        <a href="" class="header-row-socials-item">
+                        <a href="" class="header-row-socials-item col">
                             <svg width="30" height="31" viewBox="0 0 30 31" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" clip-rule="evenodd"
@@ -367,7 +367,7 @@
                                     fill="#2ECC71" />
                             </svg>
                         </a>
-                        <a href="" class="header-row-socials-item">
+                        <a href="" class="header-row-socials-item col">
                             <svg width="30" height="31" viewBox="0 0 30 31" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" clip-rule="evenodd"
@@ -375,7 +375,7 @@
                                     fill="#2ECC71" />
                             </svg>
                         </a>
-                        <a href="" class="header-row-socials-item">
+                        <a href="" class="header-row-socials-item col">
                             <svg width="30" height="31" viewBox="0 0 30 31" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" clip-rule="evenodd"
